# Tetravex-solver

./: CMakeLists.txt  README.md
data/: example.txt  example2.txt  tetravex.txt  tetravex_3_3.txt  tetravex_3_3_n.txt  tetravex_4_4.txt  tetravex_5_5.txt  tetravex_6_6.txt  tetravex_test.txt  tetravex_test2.txt  tetravex_test_2_2.txt
src/: main.cc  tetracell.hh
src/solver/: CMakeLists.txt  tetracell.hh  tetrasolver.cc  tetrasolver.hh
src/utils/: io.hh  io.hxx
